# IDP

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  arm.cmake
docs/html/: annotated.html  clamp__control_8cc.html  clamp__control_8cc__incl.map  clamp__control_8cc__incl.md5  clamp__control_8cc_source.html  clamp__control_8h.html  clamp__control_8h__dep__incl.map  clamp__control_8h__dep__incl.md5  clamp__control_8h__incl.md5  clamp__control_8h_source.html  classIDP_1_1ClampControl-members.html  classIDP_1_1ClampControl.html  classIDP_1_1ClampControl__coll__graph.md5  classIDP_1_1HardwareAbstractionLayer-members.html  classIDP_1_1HardwareAbstractionLayer.html  classIDP_1_1LineFollowing-members.html  classIDP_1_1LineFollowing.html  classIDP_1_1Menu-members.html  classIDP_1_1Menu.html  classIDP_1_1MissionSupervisor-members.html  classIDP_1_1MissionSupervisor.html  classIDP_1_1MissionSupervisor__coll__graph.map  classIDP_1_1MissionSupervisor__coll__graph.md5  classIDP_1_1Navigation-members.html  classIDP_1_1Navigation.html  classIDP_1_1Navigation__coll__graph.map  classIDP_1_1Navigation__coll__graph.md5  classIDP_1_1SelfTests-members.html  classIDP_1_1SelfTests.html  (+99 more)
lib/: CMakeLists.txt
lib/gmock/: CMakeLists.txt
lib/gmock/gmock/gtest/src/: gtest_main.cc
lib/gmock/lib/: test  test.cc
lib/librobot/: CMakeLists.txt  arm.cnf  delay.h  robot_instr.h  robot_link.h  stopwatch.h
misc/: layout.dot  levelsfile_format  line_following_plan  mission_supervisor_logic_flow.dot  mission_supervisor_state_machine.dot  pathfinding_logic_flow.dot  statefile_format
src/: CMakeLists.txt  Doxyfile  main.cc
src/docs/html/: annotated.html  clamp__control_8cc.html  clamp__control_8cc__incl.map  clamp__control_8cc__incl.md5  clamp__control_8h.html  clamp__control_8h__dep__incl.map  clamp__control_8h__dep__incl.md5  clamp__control_8h_source.html  classIDP_1_1ClampControl-members.html  classIDP_1_1ClampControl.html  classIDP_1_1HardwareAbstractionLayer-members.html  classIDP_1_1HardwareAbstractionLayer.html  classIDP_1_1LineFollowing-members.html  classIDP_1_1LineFollowing.html  classIDP_1_1LineFollowing__coll__graph.map  classIDP_1_1LineFollowing__coll__graph.md5  classIDP_1_1MissionSupervisor-members.html  classIDP_1_1MissionSupervisor.html  classIDP_1_1MissionSupervisor__coll__graph.md5  classIDP_1_1Navigation-members.html  classIDP_1_1Navigation.html  classIDP_1_1Navigation__coll__graph.md5  classIDP_1_1SelfTests-members.html  classIDP_1_1SelfTests.html  classIDP_1_1StatusWatchdog-members.html  classIDP_1_1StatusWatchdog.html  classes.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  hal_8cc.html  hal_8cc__incl.map  hal_8cc__incl.md5  hal_8h.html  hal_8h__dep__incl.map  hal_8h__dep__incl.md5  hal_8h__incl.md5  hal_8h_source.html  (+52 more)
src/docs/latex/: annotated.tex  clamp__control_8cc.tex  clamp__control_8cc__incl.dot  clamp__control_8cc__incl.md5  clamp__control_8h.tex  clamp__control_8h__dep__incl.dot  clamp__control_8h__dep__incl.md5  clamp__control_8h__incl.dot  classIDP_1_1ClampControl.tex  classIDP_1_1HardwareAbstractionLayer.tex  classIDP_1_1LineFollowing.tex  classIDP_1_1LineFollowing__coll__graph.dot  classIDP_1_1LineFollowing__coll__graph.md5  classIDP_1_1MissionSupervisor.tex  classIDP_1_1MissionSupervisor__coll__graph.dot  classIDP_1_1MissionSupervisor__coll__graph.md5  classIDP_1_1Navigation.tex  classIDP_1_1Navigation__coll__graph.md5  classIDP_1_1SelfTests.tex  classIDP_1_1StatusWatchdog.tex  doxygen.sty  files.tex  hal_8cc.tex  hal_8cc__incl.dot  hal_8cc__incl.md5  hal_8h.tex  hal_8h__dep__incl.dot  hal_8h__dep__incl.md5  hal_8h__incl.dot  hal_8h__incl.md5  index.tex  libidp_8h.tex  libidp_8h__incl.dot  libidp_8h__incl.md5  line__following_8cc.tex  line__following_8cc__incl.dot  line__following_8cc__incl.md5  line__following_8h.tex  line__following_8h__dep__incl.dot  line__following_8h__dep__incl.md5  (+31 more)
src/idpbin/: CMakeLists.txt  main.cc  menu.cc  menu.h
src/libidp/: CMakeLists.txt  clamp_control.cc  clamp_control.h  debug.h  hal.cc  hal.h  libidp.h  line_following.cc  line_following.h  mission_supervisor.cc  mission_supervisor.h  navigation.cc  navigation.h  self_tests.cc  self_tests.h  status_watchdog.cc  status_watchdog.h
src/libidp/test/: test_mission_supervisor.cc
(+155 files in other folders)
